--- a/public/admin/admin_master.html
+++ b/public/admin/admin_master.html
@@ -17,7 +17,7 @@
 
     /*========================================
       2. HEADER SECTION
-         - Compact header with hamburger and actions
+         - Compact header with hamburger icon
     ========================================*/
     .admin-header {
       position: fixed;
@@ -33,6 +33,7 @@
       z-index: 1000;
       box-shadow: 0 2px 4px rgba(0,0,0,0.5);
       font-size: 0.9rem;
+      height: 50px; /* Fixed header height */
     }
     .admin-header .left-section {
       display: flex;
@@ -65,17 +66,17 @@
 
     /*========================================
       3. SIDEBAR & OVERLAY
-         - Sidebar with admin page list
+         - Sidebar starts beneath header (top:50px)
     ========================================*/
     .sidebar {
       position: fixed;
-      top: 0;
+      top: 50px; /* Start below the header */
       left: -240px;
       width: 240px;
-      height: 100%;
+      height: calc(100% - 50px); /* Full height minus header */
       background: #333;
       color: #fff;
-      padding-top: 50px; /* Space for header */
+      padding-top: 10px;
       transition: left 0.3s ease;
       z-index: 1100;
       font-size: 0.9rem;
@@ -90,31 +91,27 @@
       cursor: pointer;
       transition: background 0.3s;
     }
-    .sidebar ul li:hover {
-      background: #444;
-    }
+    .sidebar ul li:hover { background: #444; }
     .overlay {
       position: fixed;
-      top: 0;
+      top: 50px; /* Below header */
       left: 0;
       width: 100%;
-      height: 100%;
+      height: calc(100% - 50px);
       background: rgba(0,0,0,0.5);
       display: none;
       z-index: 1050;
     }
-    .overlay.show {
-      display: block;
-    }
+    .overlay.show { display: block; }
 
     /*========================================
       4. MAIN CONTENT
-         - Dashboard header, cards grid, chart & recent activity
+         - 2×2 grid cards, chart, recent activity
     ========================================*/
     main {
-      padding: 60px 10px 70px; /* Space for header and footer */
+      padding: 60px 10px 70px; /* account for header (50px) and footer */
       margin-top: 50px;
-      min-height: calc(100vh - 130px);
+      min-height: calc(100vh - 120px);
     }
     .dashboard-header {
       text-align: center;
@@ -129,7 +126,7 @@
       font-size: 0.9rem;
       color: #555;
     }
-    /* 2x2 Grid for summary cards */
+    /* 2x2 grid for summary cards */
     .card-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -149,11 +146,10 @@
       transform: translateY(-3px);
       box-shadow: 0 6px 12px rgba(0,0,0,0.15);
     }
-    /* Different gradient backgrounds */
-    .card-sales { background: linear-gradient(135deg, #007bff, #00c6ff); }
-    .card-orders { background: linear-gradient(135deg, #28a745, #85e085); }
+    .card-sales    { background: linear-gradient(135deg, #007bff, #00c6ff); }
+    .card-orders   { background: linear-gradient(135deg, #28a745, #85e085); }
     .card-products { background: linear-gradient(135deg, #6f42c1, #a285e6); }
-    .card-customers { background: linear-gradient(135deg, #fd7e14, #ff9f59); }
+    .card-customers{ background: linear-gradient(135deg, #fd7e14, #ff9f59); }
     .summary-card h3 {
       margin-bottom: 4px;
       font-size: 1rem;
@@ -199,8 +195,8 @@
     .activity-item:last-child { border-bottom: none; }
 
     /*========================================
-      5. FOOTER (COMPACT)
-         - Compact footer with icon links and More dropdown
+      5. FOOTER (SCROLLABLE HORIZONTALLY)
+         - Footer with horizontally scrollable icon links
     ========================================*/
     .admin-footer {
       position: fixed;
@@ -208,57 +204,25 @@
       left: 0;
       width: 100%;
       background: #222;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
       padding: 6px 0;
       z-index: 1000;
-      font-size: 0.8rem;
+      overflow-x: auto;
+      white-space: nowrap;
     }
     .admin-footer a {
+      display: inline-block;
       color: #fff;
       text-decoration: none;
       text-align: center;
-      flex: 1;
-      padding: 0 3px;
-      white-space: nowrap;
+      padding: 0 8px;
+      margin: 0 2px;
+      font-size: 0.8rem;
     }
     .admin-footer a i {
       display: block;
       font-size: 1.1rem;
       margin-bottom: 2px;
     }
-    .more-dropdown {
-      position: relative;
-      flex: 1;
-      text-align: center;
-    }
-    .more-dropdown > a { cursor: pointer; }
-    .more-dropdown-content {
-      position: absolute;
-      bottom: 35px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #222;
-      border: 1px solid #444;
-      border-radius: 4px;
-      overflow: hidden;
-      display: none;
-      z-index: 1100;
-      min-width: 120px;
-    }
-    .more-dropdown-content a {
-      display: block;
-      color: #fff;
-      padding: 6px 8px;
-      text-decoration: none;
-      font-size: 0.8rem;
-      border-bottom: 1px solid #444;
-      white-space: nowrap;
-    }
-    .more-dropdown-content a:last-child { border-bottom: none; }
-    .more-dropdown-content a:hover { background: #444; }
-    .more-dropdown:hover .more-dropdown-content { display: block; }
   </style>
 </head>
 <body>
@@ -291,7 +255,7 @@
       <li onclick="navigate('about_admin.html')">About</li>
     </ul>
   </nav>
-  <div class="sidebar-overlay" id="overlay"></div>
+  <div class="overlay" id="overlay"></div>
 
   <!-- MAIN CONTENT -->
   <main>
@@ -338,24 +302,19 @@
     </div>
   </main>
 
-  <!-- FOOTER -->
+  <!-- FOOTER (SCROLLABLE HORIZONTALLY) -->
   <footer class="admin-footer">
     <a href="admin_dashboard.html"><i class="fas fa-tachometer-alt"></i>Dash</a>
     <a href="home_admin.html"><i class="fas fa-home"></i>Home</a>
     <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i>Shop</a>
     <a href="details_admin.html"><i class="fas fa-info-circle"></i>Info</a>
-    <div class="more-dropdown">
-      <a><i class="fas fa-ellipsis-h"></i>More</a>
-      <div class="more-dropdown-content">
-        <a href="payments_admin.html"><i class="fas fa-credit-card"></i>Pay</a>
-        <a href="checkout_admin.html"><i class="fas fa-shopping-cart"></i>Chkout</a>
-        <a href="delivery_admin.html"><i class="fas fa-truck"></i>Dlvry</a>
-        <a href="support_admin.html"><i class="fas fa-headset"></i>Sup</a>
-        <a href="contact_admin.html"><i class="fas fa-envelope"></i>Cntct</a>
-        <a href="analytics_admin.html"><i class="fas fa-chart-line"></i>Analyt</a>
-        <a href="about_admin.html"><i class="fas fa-info"></i>About</a>
-      </div>
-    </div>
+    <a href="payments_admin.html"><i class="fas fa-credit-card"></i>Pay</a>
+    <a href="checkout_admin.html"><i class="fas fa-shopping-cart"></i>Chkout</a>
+    <a href="delivery_admin.html"><i class="fas fa-truck"></i>Dlvry</a>
+    <a href="support_admin.html"><i class="fas fa-headset"></i>Sup</a>
+    <a href="contact_admin.html"><i class="fas fa-envelope"></i>Cntct</a>
+    <a href="analytics_admin.html"><i class="fas fa-chart-line"></i>Analyt</a>
+    <a href="about_admin.html"><i class="fas fa-info"></i>About</a>
   </footer>
 
   <script>
