--- a/public/admin/admin_master.html
+++ b/public/admin/admin_master.html
@@ -16,8 +16,7 @@
     html, body { height: 100%; font-family: Arial, sans-serif; background: #f0f2f5; }
 
     /*========================================
-      2. HEADER SECTION
-         - Compact header with hamburger icon
+      2. HEADER SECTION (Compact)
     ========================================*/
     .admin-header {
       position: fixed;
@@ -33,7 +32,7 @@
       z-index: 1000;
       box-shadow: 0 2px 4px rgba(0,0,0,0.5);
       font-size: 0.9rem;
-      height: 50px; /* Fixed header height */
+      height: 50px;
     }
     .admin-header .left-section {
       display: flex;
@@ -70,10 +69,10 @@
     ========================================*/
     .sidebar {
       position: fixed;
-      top: 50px; /* Start below the header */
+      top: 50px; /* beneath header */
       left: -240px;
       width: 240px;
-      height: calc(100% - 50px); /* Full height minus header */
+      height: calc(100% - 50px);
       background: #333;
       color: #fff;
       padding-top: 10px;
@@ -81,20 +80,28 @@
       z-index: 1100;
       font-size: 0.9rem;
     }
-    .sidebar.open {
-      left: 0;
-    }
+    .sidebar.open { left: 0; }
     .sidebar ul { list-style: none; }
     .sidebar ul li {
+      display: flex;
+      align-items: center;
       padding: 10px 15px;
       border-bottom: 1px solid #444;
       cursor: pointer;
       transition: background 0.3s;
     }
     .sidebar ul li:hover { background: #444; }
+    /* Menu image in sidebar item */
+    .sidebar ul li img {
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
+      border-radius: 3px;
+      object-fit: cover;
+    }
     .overlay {
       position: fixed;
-      top: 50px; /* Below header */
+      top: 50px; /* below header */
       left: 0;
       width: 100%;
       height: calc(100% - 50px);
@@ -106,10 +113,10 @@
 
     /*========================================
       4. MAIN CONTENT
-         - 2×2 grid cards, chart, recent activity
+         - 2×2 grid cards, chart & recent activity
     ========================================*/
     main {
-      padding: 60px 10px 70px; /* account for header (50px) and footer */
+      padding: 60px 10px 70px;
       margin-top: 50px;
       min-height: calc(100vh - 120px);
     }
@@ -122,11 +129,8 @@
       margin-bottom: 6px;
       color: #333;
     }
-    .dashboard-header p {
-      font-size: 0.9rem;
-      color: #555;
-    }
-    /* 2x2 grid for summary cards */
+    .dashboard-header p { font-size: 0.9rem; color: #555; }
+    /* 2×2 grid for summary cards */
     .card-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -150,15 +154,8 @@
     .card-orders   { background: linear-gradient(135deg, #28a745, #85e085); }
     .card-products { background: linear-gradient(135deg, #6f42c1, #a285e6); }
     .card-customers{ background: linear-gradient(135deg, #fd7e14, #ff9f59); }
-    .summary-card h3 {
-      margin-bottom: 4px;
-      font-size: 1rem;
-      font-weight: 600;
-    }
-    .summary-card p {
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
+    .summary-card h3 { margin-bottom: 4px; font-size: 1rem; font-weight: 600; }
+    .summary-card p { font-size: 1.2rem; font-weight: bold; }
     /* Chart section */
     .chart-section {
       background: #fff;
@@ -181,11 +178,7 @@
       border-radius: 6px;
       box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     }
-    .recent-activity h4 {
-      font-size: 1rem;
-      margin-bottom: 8px;
-      color: #333;
-    }
+    .recent-activity h4 { font-size: 1rem; margin-bottom: 8px; color: #333; }
     .activity-item {
       padding: 6px 0;
       border-bottom: 1px solid #eee;
@@ -195,19 +188,28 @@
     .activity-item:last-child { border-bottom: none; }
 
     /*========================================
-      5. FOOTER (SCROLLABLE HORIZONTALLY)
-         - Footer with horizontally scrollable icon links
+      5. FOOTER (Horizontally Scrollable with Arrow Buttons)
     ========================================*/
-    .admin-footer {
+    .footer-container {
       position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
       background: #222;
-      padding: 6px 0;
+      overflow: hidden;
       z-index: 1000;
+      display: flex;
+      align-items: center;
+    }
+    .footer-scroll {
       overflow-x: auto;
       white-space: nowrap;
+      flex-grow: 1;
+      padding: 6px 0;
+      -webkit-overflow-scrolling: touch;
+    }
+    .footer-scroll::-webkit-scrollbar {
+      display: none;
     }
     .admin-footer a {
       display: inline-block;
@@ -217,12 +219,26 @@
       padding: 0 8px;
       margin: 0 2px;
       font-size: 0.8rem;
+      white-space: nowrap;
     }
     .admin-footer a i {
       display: block;
       font-size: 1.1rem;
       margin-bottom: 2px;
     }
+    /* Arrow buttons */
+    .scroll-btn {
+      background: rgba(0,0,0,0.6);
+      color: #fff;
+      border: none;
+      padding: 4px 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 50%;
+      z-index: 1010;
+    }
+    .scroll-btn.left { margin-left: 5px; }
+    .scroll-btn.right { margin-right: 5px; }
   </style>
 </head>
 <body>
@@ -241,18 +257,42 @@
   <!-- SIDEBAR & OVERLAY -->
   <nav class="sidebar" id="sidebar">
     <ul>
-      <li onclick="navigate('admin_dashboard.html')">Dashboard</li>
-      <li onclick="navigate('home_admin.html')">Home</li>
-      <li onclick="navigate('header_admin.html')">Header</li>
-      <li onclick="navigate('ecommerce_admin.html')">Shop</li>
-      <li onclick="navigate('details_admin.html')">Details</li>
-      <li onclick="navigate('payments_admin.html')">Payments</li>
-      <li onclick="navigate('checkout_admin.html')">Checkout</li>
-      <li onclick="navigate('delivery_admin.html')">Delivery</li>
-      <li onclick="navigate('support_admin.html')">Support</li>
-      <li onclick="navigate('contact_admin.html')">Contact</li>
-      <li onclick="navigate('analytics_admin.html')">Analytics</li>
-      <li onclick="navigate('about_admin.html')">About</li>
+      <li onclick="navigate('admin_dashboard.html')">
+        <img src="https://via.placeholder.com/20" alt="Dashboard"> Dashboard
+      </li>
+      <li onclick="navigate('home_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Home"> Home
+      </li>
+      <li onclick="navigate('header_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Header"> Header
+      </li>
+      <li onclick="navigate('ecommerce_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Shop"> Shop
+      </li>
+      <li onclick="navigate('details_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Details"> Details
+      </li>
+      <li onclick="navigate('payments_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Payments"> Payments
+      </li>
+      <li onclick="navigate('checkout_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Checkout"> Checkout
+      </li>
+      <li onclick="navigate('delivery_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Delivery"> Delivery
+      </li>
+      <li onclick="navigate('support_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Support"> Support
+      </li>
+      <li onclick="navigate('contact_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Contact"> Contact
+      </li>
+      <li onclick="navigate('analytics_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="Analytics"> Analytics
+      </li>
+      <li onclick="navigate('about_admin.html')">
+        <img src="https://via.placeholder.com/20" alt="About"> About
+      </li>
     </ul>
   </nav>
   <div class="overlay" id="overlay"></div>
@@ -302,19 +342,25 @@
     </div>
   </main>
 
-  <!-- FOOTER (SCROLLABLE HORIZONTALLY) -->
+  <!-- FOOTER with Scroll Buttons -->
   <footer class="admin-footer">
-    <a href="admin_dashboard.html"><i class="fas fa-tachometer-alt"></i>Dash</a>
-    <a href="home_admin.html"><i class="fas fa-home"></i>Home</a>
-    <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i>Shop</a>
-    <a href="details_admin.html"><i class="fas fa-info-circle"></i>Info</a>
-    <a href="payments_admin.html"><i class="fas fa-credit-card"></i>Pay</a>
-    <a href="checkout_admin.html"><i class="fas fa-shopping-cart"></i>Chkout</a>
-    <a href="delivery_admin.html"><i class="fas fa-truck"></i>Dlvry</a>
-    <a href="support_admin.html"><i class="fas fa-headset"></i>Sup</a>
-    <a href="contact_admin.html"><i class="fas fa-envelope"></i>Cntct</a>
-    <a href="analytics_admin.html"><i class="fas fa-chart-line"></i>Analyt</a>
-    <a href="about_admin.html"><i class="fas fa-info"></i>About</a>
+    <button class="scroll-btn left" id="scrollLeft"><i class="fas fa-angle-double-left"></i></button>
+    <div class="footer-container">
+      <div class="footer-scroll" id="footerScroll">
+        <a href="admin_dashboard.html"><i class="fas fa-tachometer-alt"></i>Dash</a>
+        <a href="home_admin.html"><i class="fas fa-home"></i>Home</a>
+        <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i>Shop</a>
+        <a href="details_admin.html"><i class="fas fa-info-circle"></i>Info</a>
+        <a href="payments_admin.html"><i class="fas fa-credit-card"></i>Pay</a>
+        <a href="checkout_admin.html"><i class="fas fa-shopping-cart"></i>Chkout</a>
+        <a href="delivery_admin.html"><i class="fas fa-truck"></i>Dlvry</a>
+        <a href="support_admin.html"><i class="fas fa-headset"></i>Sup</a>
+        <a href="contact_admin.html"><i class="fas fa-envelope"></i>Cntct</a>
+        <a href="analytics_admin.html"><i class="fas fa-chart-line"></i>Analyt</a>
+        <a href="about_admin.html"><i class="fas fa-info"></i>About</a>
+      </div>
+    </div>
+    <button class="scroll-btn right" id="scrollRight"><i class="fas fa-angle-double-right"></i></button>
   </footer>
 
   <script>
@@ -376,6 +422,18 @@
           }
         }
       });
+    });
+
+    // FOOTER SCROLLING BUTTONS
+    const footerScroll = document.getElementById("footerScroll");
+    const scrollLeftBtn = document.getElementById("scrollLeft");
+    const scrollRightBtn = document.getElementById("scrollRight");
+
+    scrollLeftBtn.addEventListener("click", () => {
+      footerScroll.scrollBy({ left: -100, behavior: "smooth" });
+    });
+    scrollRightBtn.addEventListener("click", () => {
+      footerScroll.scrollBy({ left: 100, behavior: "smooth" });
     });
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
